Non-expected values in vertex color layer for vertex index (Particle Instance modifier) #57994

Closed
opened 2018-11-22 09:02:55 +01:00 by Serge Lyatin · 5 comments

System Information
Win 10 (64)
Blender Version
Broken: 2.79.6

Short description of error
Particle instance stores indices from default Cube in vertex color layer. Then this data is transfered back to Cube via Data Transfer Modifier.

Color picker in "Vertex paint" mode shows maximum value as 0.875 which is closer to 7/8, but it is expected to be 1.0 or in other words 7 / (total vertex count - 1).

For comparison there is a multiplier color layer with 0.875 value (unmute "Divide" node).

Exact steps for others to reproduce the error
Open file, go to Vertex paint, color pick values with muted/unmuted "Divide" node

Vertex_index.blend

**System Information** Win 10 (64) **Blender Version** Broken: 2.79.6 **Short description of error** Particle instance stores indices from default Cube in vertex color layer. Then this data is transfered back to Cube via Data Transfer Modifier. Color picker in "Vertex paint" mode shows maximum value as 0.875 which is closer to 7/8, but it is expected to be 1.0 or in other words 7 / (total vertex count - 1). For comparison there is a multiplier color layer with 0.875 value (unmute "Divide" node). **Exact steps for others to reproduce the error** Open file, go to Vertex paint, color pick values with muted/unmuted "Divide" node [Vertex_index.blend](https://archive.blender.org/developer/F5677706/Vertex_index.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-11-22 10:26:27 +01:00
Member

Indeed looks like "off-by-one", will have a look...

Indeed looks like "off-by-one", will have a look...

This issue was referenced by 0eb61c799d

This issue was referenced by 0eb61c799d0e98ccb92b12aea744c79a9da7e7c2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57994
No description provided.