Fix T57994: Particle Instance modifiers 'Index Layer' off by one

better have this vertex color layer cover the whole 0-1 range

thx @sergey for checking

Maniphest Tasks: T57994

Differential Revision: https://developer.blender.org/D3976